--- a/src/main/resources/templates/include/admin/adminPage.html
+++ b/src/main/resources/templates/include/admin/adminPage.html
@@ -6,9 +6,9 @@
 	    </li>
 	    <li :class="{ disabled: !pagination.hasPrevious }">
 	      <a  href="#nowhere" @click="jump('pre')">‹</a>
-	    </li>		    
+	    </li>
 
-		<li  v-for="i in pagination.navigatepageNums">
+		<li  v-for="i in pagination.navigateNums">
 			<a href="#nowhere" @click="jumpByNumber(i-1)" >
 				{{i}}
 			</a>
@@ -19,7 +19,7 @@
 	    </li>
 	    <li :class="{ disabled: pagination.last }">
 	      <a  href="#nowhere" @click="jump('last')">»</a>
-	    </li>		    
+	    </li>
 	  </ul>
 	</nav>    
 </div>
