--- a/src/main/resources/templates/admin/listCategory.html
+++ b/src/main/resources/templates/admin/listCategory.html
@@ -8,6 +8,7 @@
     $(function(){
         var data4Vue = {
             uri:'categories',
+            pagination:{},
             beans: []
         };
 
@@ -16,14 +17,21 @@
             el: '#workingArea',
             data: data4Vue,
             mounted:function(){ //mounted　表示这个 Vue 对象加载成功了
-                this.list();
+                this.list(0);
             },
             methods: {
-                list:function(){
-                    var url =  this.uri;
+                list:function(start){
+                    var url =  this.uri +"?start=" +start;
                     axios.get(url).then(function(response) {
-                        vue.beans = response.data;
+                        vue.pagination = response.data;
+                        vue.beans = response.data.content;
                     });
+                },
+                jump : function (page) {
+                    jump(page,vue);
+                },
+                jumpByNumber : function (start) {
+                    jumpByNumber(start,vue);
                 }
             }
         });
@@ -72,6 +80,7 @@
             </tbody>
         </table>
     </div>
+    <div th:replace="include/admin/adminPage::html"></div>
 </div>
 <div th:replace="include/admin/adminFooter::html" ></div>
 </body>
