--- a/src/main/resources/templates/admin/listCategory.html
+++ b/src/main/resources/templates/admin/listCategory.html
@@ -8,8 +8,10 @@
     $(function(){
         var data4Vue = {
             uri:'categories',
+            beans: [],
+            bean: { id: 0, name: ''},
             pagination:{},
-            beans: []
+            file: null
         };
 
         //ViewModel
@@ -21,16 +23,50 @@
             },
             methods: {
                 list:function(start){
-                    var url =  this.uri +"?start=" +start;
+                    var url =  this.uri+ "?start="+start;
                     axios.get(url).then(function(response) {
                         vue.pagination = response.data;
-                        vue.beans = response.data.content;
+                        vue.beans = response.data.content   ;
                     });
                 },
-                jump : function (page) {
-                    jump(page,vue);
+                add: function () {
+                    if(!checkEmpty(this.bean.name, "分类名称"))
+                        return;
+                    if(!checkEmpty(this.file, "分类图片"))
+                        return;
+                    var url = this.uri;
+
+                    //axios.js 上传文件要用 formData 这种方式
+                    var formData = new FormData();
+                    formData.append("image", this.file);
+                    formData.append("name", this.bean.name);
+                    axios.post(url,formData).then(function(response){
+                        vue.list(0);
+                        vue.bean = { id: 0, name: '', hp: '0'};
+                        $("#categoryPic").val('');
+                        vue.file = null;
+                    });
                 },
-                jumpByNumber : function (start) {
+                deleteBean:function (id) {
+                    if(!checkDeleteLink()){
+                        return;
+                    }
+                    var url=this.uri+"/"+id;
+                    axios.delete(url).then(function (response) {
+                        if(0!=response.data.length){
+                            alert(response.data);
+                        }else{
+                            vue.list(0);
+                        }
+                    });
+                },
+                getFile: function (event) {
+                    this.file = event.target.files[0];
+                },
+                jump: function(page){
+                    jump(page,vue); //定义在adminHeader.html 中
+                },
+                jumpByNumber: function(start){
                     jumpByNumber(start,vue);
                 }
             }
@@ -80,7 +116,29 @@
             </tbody>
         </table>
     </div>
-    <div th:replace="include/admin/adminPage::html"></div>
+    <div th:replace="include/admin/adminPage::html" ></div>
+    <div class="panel panel-warning addDiv">
+        <div class="panel-heading">新增分类</div>
+        <div class="panel-body">
+            <table class="addTable">
+                <tr>
+                    <td>分类名称</td>
+                    <td><input  @keyup.enter="add" v-model.trim="bean.name" type="text" class="form-control"></td>
+                </tr>
+                <tr>
+                    <td>分类图片</td>
+                    <td>
+                        <input id="categoryPic" accept="image/*" type="file" name="image" @change="getFile($event)" />
+                    </td>
+                </tr>
+                <tr class="submitTR">
+                    <td colspan="2" align="center">
+                        <a href="#nowhere"  @click="add" class="btn btn-success">提交</a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </div>
 <div th:replace="include/admin/adminFooter::html" ></div>
 </body>
